<resources>
    <string name="app_name">Team Rolling</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="players_list_fragment_label">Players List</string>
    <string name="choose_players">Choose players</string>
    <string name="draw">Draw Lots</string>

    <string name="counter_default" translatable="false">0</string>
    <string name="number_selected_players">Number of selected players</string>
    <string name="add_player">Add player</string>
    <string name="player_name">Player Name</string>
    <string name="player_name_hint">Jorge</string>
    <string name="create_player">Save</string>
    <string name="number_player_default" translatable="false">0</string>
    <string name="header_number">N°</string>
    <string name="header_player_name">@string/player_name</string>
    <string name="player_draw">Player draw</string>
</resources>