<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_sides"
    android:layout_marginLeft="@dimen/margin_sides"
    android:layout_marginTop="@dimen/margin_sides"
    android:layout_marginEnd="@dimen/margin_sides"
    android:layout_marginRight="@dimen/margin_sides"
    android:layout_marginBottom="@dimen/margin_sides"
    tools:context=".fragment.EditPlayerFragment">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_name"
        android:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/edit_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/player_name_hint"
        android:inputType="text"
        android:text=""
        android:fontFamily="casual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_name" />

    <Button
        android:id="@+id/save_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/create_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />


</androidx.constraintlayout.widget.ConstraintLayout>